--- a/forms-editors.html
+++ b/forms-editors.html
@@ -14,7 +14,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Demo: DataTables - Tables | Vuexy - Bootstrap Dashboard PRO</title>
+    <title>Demo: Editors - Forms | Vuexy - Bootstrap Dashboard PRO</title>
 
     <meta name="description" content="" />
 
@@ -44,14 +44,10 @@
 
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css" />
-    <link rel="stylesheet" href="../../assets/vendor/libs/flatpickr/flatpickr.css" />
-    <!-- Row Group CSS -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/datatables-rowgroup-bs5/rowgroup.bootstrap5.css" />
-    <!-- Form Validation -->
-    <link rel="stylesheet" href="../../assets/vendor/libs/@form-validation/form-validation.css" />
+    <link rel="stylesheet" href="../../assets/vendor/libs/quill/typography.css" />
+    <link rel="stylesheet" href="../../assets/vendor/libs/highlight/highlight.css" />
+    <link rel="stylesheet" href="../../assets/vendor/libs/quill/katex.css" />
+    <link rel="stylesheet" href="../../assets/vendor/libs/quill/editor.css" />
 
     <!-- Page CSS -->
 
@@ -1523,13 +1519,13 @@
                   </li>
 
                   <!-- Forms -->
-                  <li class="menu-item">
+                  <li class="menu-item active">
                     <a href="javascript:void(0)" class="menu-link menu-toggle">
                       <i class="menu-icon icon-base ti tabler-forms"></i>
                       <div data-i18n="Forms">Forms</div>
                     </a>
                     <ul class="menu-sub">
-                      <li class="menu-item">
+                      <li class="menu-item active">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                           <i class="menu-icon icon-base ti tabler-toggle-left"></i>
                           <div data-i18n="Form Elements">Form Elements</div>
@@ -1550,7 +1546,7 @@
                               <div data-i18n="Custom Options">Custom Options</div>
                             </a>
                           </li>
-                          <li class="menu-item">
+                          <li class="menu-item active">
                             <a href="forms-editors.html" class="menu-link">
                               <div data-i18n="Editors">Editors</div>
                             </a>
@@ -1638,7 +1634,7 @@
                   </li>
 
                   <!-- Tables -->
-                  <li class="menu-item active">
+                  <li class="menu-item">
                     <a href="javascript:void(0)" class="menu-link menu-toggle">
                       <i class="menu-icon icon-base ti tabler-layout-grid"></i>
                       <div data-i18n="Tables">Tables</div>
@@ -1651,13 +1647,13 @@
                           <div data-i18n="Tables">Tables</div>
                         </a>
                       </li>
-                      <li class="menu-item active">
+                      <li class="menu-item">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                           <i class="menu-icon icon-base ti tabler-layout-grid"></i>
                           <div data-i18n="Datatables">Datatables</div>
                         </a>
                         <ul class="menu-sub">
-                          <li class="menu-item active">
+                          <li class="menu-item">
                             <a href="tables-datatables-basic.html" class="menu-link">
                               <div data-i18n="Basic">Basic</div>
                             </a>
@@ -1739,213 +1735,108 @@
 
             <!-- Content -->
             <div class="container-xxl flex-grow-1 container-p-y">
-              <!-- DataTable with Buttons -->
-              <div class="card">
-                <div class="card-datatable table-responsive pt-0">
-                  <table class="datatables-basic table">
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th></th>
-                        <th>id</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Date</th>
-                        <th>Salary</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
-              <!-- Modal to add new record -->
-              <div class="offcanvas offcanvas-end" id="add-new-record">
-                <div class="offcanvas-header border-bottom">
-                  <h5 class="offcanvas-title" id="exampleModalLabel">New Record</h5>
-                  <button
-                    type="button"
-                    class="btn-close text-reset"
-                    data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body flex-grow-1">
-                  <form class="add-new-record pt-0 row g-2" id="form-add-new-record" onsubmit="return false">
-                    <div class="col-sm-12 form-control-validation">
-                      <label class="form-label" for="basicFullname">Full Name</label>
-                      <div class="input-group input-group-merge">
-                        <span id="basicFullname2" class="input-group-text"
-                          ><i class="icon-base ti tabler-user"></i
-                        ></span>
-                        <input
-                          type="text"
-                          id="basicFullname"
-                          class="form-control dt-full-name"
-                          name="basicFullname"
-                          placeholder="John Doe"
-                          aria-label="John Doe"
-                          aria-describedby="basicFullname2" />
+              <div class="row gy-6">
+                <!-- Snow Theme -->
+                <div class="col-12">
+                  <div class="card">
+                    <h5 class="card-header">Snow Theme</h5>
+                    <div class="card-body">
+                      <div id="snow-toolbar">
+                        <span class="ql-formats">
+                          <select class="ql-font"></select>
+                          <select class="ql-size"></select>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-bold"></button>
+                          <button class="ql-italic"></button>
+                          <button class="ql-underline"></button>
+                          <button class="ql-strike"></button>
+                        </span>
+                        <span class="ql-formats">
+                          <select class="ql-color"></select>
+                          <select class="ql-background"></select>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-script" value="sub"></button>
+                          <button class="ql-script" value="super"></button>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-header" value="1"></button>
+                          <button class="ql-header" value="2"></button>
+                          <button class="ql-blockquote"></button>
+                          <button class="ql-code-block"></button>
+                        </span>
+                      </div>
+                      <div id="snow-editor">
+                        <h6>Quill Rich Text Editor</h6>
+                        <p>
+                          Cupcake ipsum dolor sit amet. Halvah cheesecake chocolate bar gummi bears cupcake. Pie
+                          macaroon bear claw. Soufflé I love candy canes I love cotton candy I love.
+                        </p>
                       </div>
                     </div>
-                    <div class="col-sm-12 form-control-validation">
-                      <label class="form-label" for="basicPost">Post</label>
-                      <div class="input-group input-group-merge">
-                        <span id="basicPost2" class="input-group-text"
-                          ><i class="icon-base ti tabler-briefcase"></i
-                        ></span>
-                        <input
-                          type="text"
-                          id="basicPost"
-                          name="basicPost"
-                          class="form-control dt-post"
-                          placeholder="Web Developer"
-                          aria-label="Web Developer"
-                          aria-describedby="basicPost2" />
+                  </div>
+                </div>
+                <!-- /Snow Theme -->
+                <!-- Bubble Theme -->
+                <div class="col-12">
+                  <div class="card">
+                    <h5 class="card-header">Bubble Theme</h5>
+                    <div class="card-body">
+                      <div id="bubble-toolbar">
+                        <span class="ql-formats">
+                          <select class="ql-font"></select>
+                          <select class="ql-size"></select>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-bold"></button>
+                          <button class="ql-italic"></button>
+                          <button class="ql-underline"></button>
+                          <button class="ql-strike"></button>
+                        </span>
+                        <span class="ql-formats">
+                          <select class="ql-color"></select>
+                          <select class="ql-background"></select>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-script" value="sub"></button>
+                          <button class="ql-script" value="super"></button>
+                        </span>
+                        <span class="ql-formats">
+                          <button class="ql-header" value="1"></button>
+                          <button class="ql-header" value="2"></button>
+                          <button class="ql-blockquote"></button>
+                          <button class="ql-code-block"></button>
+                        </span>
+                      </div>
+                      <div id="bubble-editor">
+                        <h6>Quill Rich Text Editor</h6>
+                        <p>
+                          Cupcake ipsum dolor sit amet. Halvah cheesecake chocolate bar gummi bears cupcake. Pie
+                          macaroon bear claw. Soufflé I love candy canes I love cotton candy I love.
+                        </p>
                       </div>
                     </div>
-                    <div class="col-sm-12 form-control-validation">
-                      <label class="form-label" for="basicEmail">Email</label>
-                      <div class="input-group input-group-merge">
-                        <span class="input-group-text"><i class="icon-base ti tabler-mail"></i></span>
-                        <input
-                          type="text"
-                          id="basicEmail"
-                          name="basicEmail"
-                          class="form-control dt-email"
-                          placeholder="john.doe@example.com"
-                          aria-label="john.doe@example.com" />
-                      </div>
-                      <div class="form-text">You can use letters, numbers & periods</div>
-                    </div>
-                    <div class="col-sm-12 form-control-validation">
-                      <label class="form-label" for="basicDate">Joining Date</label>
-                      <div class="input-group input-group-merge">
-                        <span id="basicDate2" class="input-group-text"
-                          ><i class="icon-base ti tabler-calendar"></i
-                        ></span>
-                        <input
-                          type="text"
-                          class="form-control dt-date"
-                          id="basicDate"
-                          name="basicDate"
-                          aria-describedby="basicDate2"
-                          placeholder="MM/DD/YYYY"
-                          aria-label="MM/DD/YYYY" />
+                  </div>
+                </div>
+                <!-- /Bubble Theme -->
+                <!-- Full Editor -->
+                <div class="col-12">
+                  <div class="card">
+                    <h5 class="card-header">Full Editor</h5>
+                    <div class="card-body">
+                      <div id="full-editor">
+                        <h6>Quill Rich Text Editor</h6>
+                        <p>
+                          Cupcake ipsum dolor sit amet. Halvah cheesecake chocolate bar gummi bears cupcake. Pie
+                          macaroon bear claw. Soufflé I love candy canes I love cotton candy I love.
+                        </p>
                       </div>
                     </div>
-                    <div class="col-sm-12 form-control-validation">
-                      <label class="form-label" for="basicSalary">Salary</label>
-                      <div class="input-group input-group-merge">
-                        <span id="basicSalary2" class="input-group-text"
-                          ><i class="icon-base ti tabler-currency-dollar"></i
-                        ></span>
-                        <input
-                          type="number"
-                          id="basicSalary"
-                          name="basicSalary"
-                          class="form-control dt-salary"
-                          placeholder="12000"
-                          aria-label="12000"
-                          aria-describedby="basicSalary2" />
-                      </div>
-                    </div>
-                    <div class="col-sm-12">
-                      <button type="submit" class="btn btn-primary data-submit me-sm-4 me-1">Submit</button>
-                      <button type="reset" class="btn btn-outline-secondary" data-bs-dismiss="offcanvas">Cancel</button>
-                    </div>
-                  </form>
+                  </div>
                 </div>
+                <!-- /Full Editor -->
               </div>
-              <!--/ DataTable with Buttons -->
-
-              <hr class="my-12" />
-
-              <!-- Complex Headers -->
-              <div class="card">
-                <h5 class="card-header border-bottom text-md-start text-center">Complex Headers</h5>
-                <div class="card-datatable text-nowrap">
-                  <table class="dt-complex-header table table-bordered table-responsive">
-                    <thead>
-                      <tr>
-                        <th rowspan="2">Name</th>
-                        <th colspan="2">Contact</th>
-                        <th colspan="3">HR Information</th>
-                        <th rowspan="2">Action</th>
-                      </tr>
-                      <tr>
-                        <th>E-mail</th>
-                        <th>City</th>
-                        <th>Position</th>
-                        <th>Salary</th>
-                        <th class="border-1">Status</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
-              <!--/ Complex Headers -->
-
-              <hr class="my-12" />
-
-              <!-- Row grouping -->
-              <div class="card">
-                <h5 class="card-header border-bottom text-md-start text-center">Row Grouping</h5>
-                <div class="card-datatable">
-                  <table class="dt-row-grouping table table-bordered table-responsive">
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Email</th>
-                        <th>City</th>
-                        <th>Date</th>
-                        <th>Salary</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                    <tfoot>
-                      <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Email</th>
-                        <th>City</th>
-                        <th>Date</th>
-                        <th>Salary</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                      </tr>
-                    </tfoot>
-                  </table>
-                </div>
-              </div>
-              <!--/ Row grouping -->
-
-              <hr class="my-12" />
-
-              <!-- Multilingual -->
-              <div class="card">
-                <h5 class="card-header border-bottom text-md-start text-center">Multilingual</h5>
-                <div class="card-datatable">
-                  <table class="dt-multilingual table table-bordered table-responsive">
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Email</th>
-                        <th>Date</th>
-                        <th>Salary</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
-              <!--/ Multilingual -->
             </div>
             <!--/ Content -->
 
@@ -2024,20 +1915,15 @@
     <!-- endbuild -->
 
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
-    <!-- Flat Picker -->
-    <script src="../../assets/vendor/libs/moment/moment.js"></script>
-    <script src="../../assets/vendor/libs/flatpickr/flatpickr.js"></script>
-    <!-- Form Validation -->
-    <script src="../../assets/vendor/libs/@form-validation/popular.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/bootstrap5.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/auto-focus.js"></script>
+    <script src="../../assets/vendor/libs/quill/katex.js"></script>
+    <script src="../../assets//vendor/libs/highlight/highlight.js"></script>
+    <script src="../../assets/vendor/libs/quill/quill.js"></script>
 
     <!-- Main JS -->
 
     <script src="../../assets/js/main.js"></script>
 
     <!-- Page JS -->
-    <script src="../../assets/js/tables-datatables-basic.js"></script>
+    <script src="../../assets/js/forms-editors.js"></script>
   </body>
 </html>
